--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -34,7 +34,6 @@ nav ul li a {
 .containers {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 175px 175px 175px;
 }
 
 .box1 {
@@ -61,8 +60,6 @@ nav ul li a {
 .box5 {
     grid-column: 1/2;
     grid-row: 3/4;
-    display: flex;
-    flex-direction: column;
 }
     
 .box6 {
@@ -75,9 +72,18 @@ nav ul li a {
     display: block;
   }
 
-#spot3 {
-    display: contents;
-    border: 2px solid #000000;
-}
+
+  .joinbtn2 {
+      top: 150px;
+      right: 70px;
+  }
+
+  .join {
+    left: 0px;
+  }
+
+  .event {
+    left: 0px;
+  }
 
     }
