--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -124,7 +124,7 @@ p {
     height: 100%;
 }
 
-.joinbtn2  {
+.containers div .joinbtn2  {
     position: absolute;
     top: 35px;
     right: 40px;
