--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -32,7 +32,7 @@ nav ul li a {
 
 /*** MAIN GRID LAYOUT ***/
 .containers {
-    display: grid;
+ 
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
@@ -74,8 +74,8 @@ nav ul li a {
 
 
   .containers div .joinbtn2 {
-      top: 150px;
-      right: 70px;
+      top: 110px;
+      right: 60px;
   }
 
   .join {
@@ -86,4 +86,7 @@ nav ul li a {
     left: 0px;
   }
 
+  .containers {
+  grid-template-rows: repeat(2, 250px);
     }
+}
