--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -171,6 +171,7 @@ main {
 .welcome {
     position: absolute;
     top: 20px;
+    left: 0;
     padding: 5px 15px 5px 30px;
     color: white;
     background-color: #355f5f90;
