--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -248,25 +248,21 @@ main {
 .box3 {
     position: relative;
 }
-/*
+
 .box3 img {
-    position: absolute;
-    box-shadow: none;
-    border: none;
-    padding: 20px;
     object-fit: cover;
-    width: 160px;
-    right: 5px;
-    bottom: 20px;
+    height: 100%;
 }
-*/
+
 .box3 p {
     position: absolute;
-    color: #32292f;
+    color: #ffffff;
     bottom: 50px;
     left: 10px;
     padding: 5px 15px 5px 30px;
+    background-color: #355f5f90;
 }
+
 /************** END BOX-3 *****************/
 /******************************************/
 /*************** BOX-4 NEWS ***************/
