--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -75,8 +75,8 @@ nav ul li a {
 
 
   .containers div .joinbtn2 {
-      top: 110px;
-      right: 60px;
+      top: 80px;
+      left: 80px;
   }
 
   .join {
