--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -85,10 +85,23 @@ p {
 /********************************************/
 /************** BOX-3 WEATHER ***************/
 
-
 .box3 p {
     bottom: 25px;
 }
+
+.box3 .temp-box {
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+    right: 10px;
+    padding: 5px 30px 10px 30px;
+    background-color: #355f5f90;
+    color: #ffffff;
+    border: none;
+    text-align: center;
+}
+
+
 /************** END BOX-3 *****************/
 /******************************************/
 /*************** BOX-4 NEWS ***************/
