--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -102,7 +102,7 @@ nav button {
 
 nav ul li a {
     display: block;
-    padding: 5px 7px;
+    padding: 5px 15px;
     text-decoration: none;
     text-align: center;
     color: #32292f;
@@ -111,7 +111,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #ffffff;
+    background: linear-gradient(0.25turn, #b1d3d3, #faf2d6, #ffffff, #faf2d6, #b1d3d3);
 }
 
 nav ul { display: none;}
@@ -123,6 +123,11 @@ nav ul.open {display: block;}
 
 #hamburgerBtn.open span:nth-child(1) {display: none;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
+
+#hamburgerBtn:hover { 
+    color: black;
+    background: linear-gradient(0.25turn, #b1d3d3, #faf2d6, #ffffff, #faf2d6, #b1d3d3);
+}
 
 main {
     background-color: #e5f0f0;
@@ -254,13 +259,20 @@ main {
     height: 100%;
 }
 
-.box3 p {
+.box3 .temp-box {
     position: absolute;
-    color: #ffffff;
-    bottom: 50px;
+    bottom: 20px;
     left: 10px;
-    padding: 5px 15px 5px 30px;
+    right: 10px;
+    padding: 5px 30px 10px 30px;
     background-color: #355f5f90;
+    color: #ffffff;
+    border: none;
+    text-align: center;
+}
+
+.box3 .temp-box img {
+    padding: 10px;
 }
 
 /************** END BOX-3 *****************/
