--- a/lesson7/css/lazyload.css
+++ b/lesson7/css/lazyload.css
@@ -22,7 +22,7 @@ h1 {
 img {
     min-width: 50px;
     min-height: 50px;
-    border: 1px solid red;
+    border: 1px solid black;
     filter: blur(0em);
     transition: filter 0.5s;
     margin-top: 50px;
