--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -27,12 +27,6 @@ p {
 
 /*** TABLET LAYOUT ***/
 
-.containers {
-   /* grid-template-rows: repeat(3, 350px);
-    grid-template-columns: 60% 37%;*/
-   
-}
-
 .box1 {
     grid-column: 1/3;
 }
@@ -186,3 +180,42 @@ p {
     font-size: 1.2rem;
 }   
     } 
+
+
+
+/******************************************************/
+/********************DISCOVER PAGE*********************/
+/*
+.discover {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+}
+
+.discover1 {
+    grid-column: 1/3;
+}
+
+.discover2 {
+    grid-column: 1/3;
+}
+
+.discover3 {
+    grid-column: 1/3;
+}
+    
+.discover4 {
+    grid-column: 1/3;
+}
+
+.discover5 {
+    grid-column: 1/3;
+}
+.discover6 {
+    grid-column: 1/3;
+}
+
+.discover7 {
+    grid-column: 3/4;
+}
+
+*/
