--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -179,13 +179,12 @@ p {
 #banner {
     font-size: 1.2rem;
 }   
-    } 
-
+    
 
 
 /******************************************************/
 /********************DISCOVER PAGE*********************/
-/*
+
 .discover {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr; 
@@ -216,6 +215,11 @@ p {
 
 .discover7 {
     grid-column: 3/4;
+    grid-row: 1/7;
 }
 
-*/
+.discover .discover1 div {
+   background-color: #e5f0f0;
+}
+
+}
