--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -568,3 +568,12 @@ img[data-src] {
     filter: blur(0.4em);
 }
 
+.discover7 .photo-gal {
+    padding: 10px;
+    margin: 10px 10px 20px 10px;
+    text-align: center;
+}
+
+.discover7 .pics:hover {
+    box-shadow: 0 0 50px #333;
+}
