--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -94,6 +94,21 @@ nav ul li a {
 
 
 
+/******************************************************/
+/******************************************************/
+/***********************JOIN PAGE**********************/
+
+/******form styling*******/
+form label.sbs {
+    padding: .4rem 0;
+}
+
+
+
+
+
+
+
 
 
 }
