--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -223,4 +223,18 @@ p {
 }
 
 
+/******************************************************/
+/******************************************************/
+/***********************JOIN PAGE**********************/
+
+/******form styling*******/
+
+
+
+
+
+
+
+
+
 }
