--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -8,7 +8,7 @@ header {
 
 h1 {
     font-size:  40px;
-    line-height: .6;
+    line-height: 1;
     font-family: Lobster Two, cursive;
 }
 
@@ -228,13 +228,27 @@ p {
 /***********************JOIN PAGE**********************/
 
 /******form styling*******/
+#joinapp {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+form {
+    grid-column: 1/2;
+}
+
+#memberlevels {
+    grid-column: 2/3;
+}
+/*
+form input.submitBtn {
+    padding: 10px 40px;
+    margin: 40px;
+    width: 96%;
+    max-width: 20rem; 
+}
 
 
-
-
-
-
-
-
+*/
 
 }
