--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -35,8 +35,8 @@ main {
 }
 
 section {
-    background: linear-gradient(0.50turn, #e0d5e9, #d3e7f2, #8d8196);
-    border: 2px solid #004744;
+    background: linear-gradient(0.50turn, #dcebf3, #8d8196);
+    border: 2px solid #240236;
     padding-bottom: 12px;
 }
 
