--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -58,7 +58,7 @@ h1 {
 h2 {
     color: #ffffff;
     font-family: Lobster Two, cursive;
-    text-shadow: 0 3px 3px #32292F;
+    text-shadow: 0 1px 3px #32292F;
 }
 
 
@@ -750,10 +750,12 @@ form textarea {
 .groups img {
     border: none;
     box-shadow: none;
+    height: 100px;
     width: 150px;
 }
 
  .groups h2 {
     color: #000000;
-    font-family: Lato, sans-serif;;
+    font-family: Lato, sans-serif;
+    font-size: 22px;
 }
