--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -735,6 +735,22 @@ form textarea {
 /******************************************************/
 /******************DIRECTORY PAGE**********************/
 
+#directorytitle {
+    text-align: center;
+    margin: 20px 0px 10px 0px;
+    padding: 10px;
+}
+
+.gridListBtns {
+    text-align: center;
+}
+
+#grid, #list {
+    padding: 15px 40px;
+    margin: 10px;
+    background: linear-gradient(0.25turn, #b1d3d3, #faf2d6, #ffffff, #faf2d6, #b1d3d3);
+}
+
 /********* List Styling************/
 .groups div {
     display: flex;
@@ -759,3 +775,4 @@ form textarea {
     font-family: Lato, sans-serif;
     font-size: 22px;
 }
+
