--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -104,6 +104,21 @@ form label.sbs {
 }
 
 
+/******************************************************/
+/******************************************************/
+/******************DIRECTORY PAGE**********************/
+
+.list div {
+    display: flex;
+}
+
+.groups div {
+    display: flex;
+}
+
+.group div {
+    display: flex;
+}
 
 
 
